--- a/fake-news-tests-core/pom.xml
+++ b/fake-news-tests-core/pom.xml
@@ -18,6 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>io.cucumber</groupId>
