page objects: just slightly introduced spring to pageObjects to read pageConfiguration; as always, rearranged dependencies for that

--- a/fake-news-tests/src/test/resources/application.properties
+++ b/fake-news-tests/src/test/resources/application.properties
@@ -1,3 +1,6 @@
 is.remote.driver=true
 remote.driver.url= http://vm1:4444
 remote.driver.capabilities.json={"browserName":"chrome","chromeOptions":{"args":["--disable-extensions", "--start-maximized"]}}
+guardian.tone.page=https://www.theguardian.com/tone/news
+guardian.base.page=https://www.theguardian.com/
+google.search.page=https://www.google.com/
