--- a/fake-news-page-guardian/pom.xml
+++ b/fake-news-page-guardian/pom.xml
@@ -9,7 +9,7 @@
         <version>0.1</version>
     </parent>
 
-    <artifactId>fake-news-tests-core</artifactId>
+    <artifactId>fake-news-page-guardian</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,32 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-junit-platform-engine</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-suite</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>ub.code</groupId>
-            <artifactId>fake-news-definitions-core</artifactId>
-            <version>0.1</version>
-        </dependency>
-
         <dependency>
             <groupId>ub.code</groupId>
             <artifactId>fake-news-page-core</artifactId>
