guardian page-object: finished major implementation; added implicitly wait configuration for driver and minor wait config

--- a/fake-news-tests/src/test/resources/application.properties
+++ b/fake-news-tests/src/test/resources/application.properties
@@ -1,6 +1,8 @@
 is.remote.driver=true
 remote.driver.url= http://vm1:4444
+driver.implicit.wait=30
 remote.driver.capabilities.json={"browserName":"chrome","chromeOptions":{"args":["--disable-extensions", "--start-maximized"]}}
 guardian.tone.page=https://www.theguardian.com/tone/news
 guardian.base.page=https://www.theguardian.com/
 google.search.page=https://www.google.com/
+guardian.page.minor.event.timeout=10
