--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>fake-news-tests-core</module>
         <module>fake-news-page-core</module>
         <module>fake-news-page-guardian</module>
+        <module>fake-news-page-google</module>
     </modules>
 
     <properties>
