added facade layer (""services"") and model layer. Fixed configuration explosion for core tests module. Implemented basic required test.

--- a/fake-news-definitions-core/pom.xml
+++ b/fake-news-definitions-core/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>fake-news-utils</artifactId>
             <version>0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>ub.code</groupId>
+            <artifactId>fake-news-services</artifactId>
+            <version>0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
