--- a/fake-news-object-model/pom.xml
+++ b/fake-news-object-model/pom.xml
@@ -9,26 +9,12 @@
         <version>0.1</version>
     </parent>
 
-    <artifactId>fake-news-services</artifactId>
+    <artifactId>fake-news-object-model</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>ub.code</groupId>
-            <artifactId>fake-news-page-guardian</artifactId>
-            <version>0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>ub.code</groupId>
-            <artifactId>fake-news-page-google</artifactId>
-            <version>0.1</version>
-        </dependency>
-    </dependencies>
 
 </project>
