--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>fake-news-page-core</module>
         <module>fake-news-page-guardian</module>
         <module>fake-news-page-google</module>
+        <module>fake-news-object-model</module>
     </modules>
 
     <properties>
