--- a/fake-news-definitions/pom.xml
+++ b/fake-news-definitions/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>fake-news-page-google</artifactId>
             <version>0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>${version.hamcrest-all}</version>
+        </dependency>
     </dependencies>
 
 </project>
