--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,9 @@
         <version.jackson-databind>2.15.1</version.jackson-databind>
         <version.lombok>1.18.28</version.lombok>
         <version.snake-yaml>2.0</version.snake-yaml>
+        <version.commons-lang3>3.13.0</version.commons-lang3>
+
+        <version.hamcrest-all>1.3</version.hamcrest-all>
     </properties>
 
     <dependencyManagement>
@@ -105,6 +108,14 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${version.commons-lang3}</version>
+        </dependency>
+
 
     </dependencies>
 
