Added proper Readme

--- a/fake-news-tests/src/test/resources/application.properties
+++ b/fake-news-tests/src/test/resources/application.properties
@@ -1,5 +1,5 @@
 is.remote.driver=true
-remote.driver.url= http://vm1:4444
+remote.driver.url=http://localhost:4444
 driver.implicit.wait=30
 remote.driver.capabilities.json={"browserName":"chrome","chromeOptions":{"args":["--disable-extensions", "--start-maximized"]}}
 guardian.tone.page=https://www.theguardian.com/tone/news
