--- a/fake-news-tests/pom.xml
+++ b/fake-news-tests/pom.xml
@@ -36,6 +36,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M9</version>
                 <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
                     <includes>
                         <include>**/CucumberWebNewsTestsRunner.java</include>
                     </includes>
