--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,6 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <cucumber.version>7.0.0</cucumber.version>
         <junit.jupiter.version>5.10.0</junit.jupiter.version>
 
@@ -41,8 +38,8 @@
         <version.lombok>1.18.28</version.lombok>
         <version.snake-yaml>2.0</version.snake-yaml>
         <version.commons-lang3>3.13.0</version.commons-lang3>
-
         <version.hamcrest-all>1.3</version.hamcrest-all>
+        <version.gson>2.10.1</version.gson>
     </properties>
 
     <dependencyManagement>
@@ -96,7 +93,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.10.1</version>
+            <version>${version.gson}</version>
         </dependency>
 
         <dependency>
@@ -115,7 +112,6 @@
             <artifactId>commons-lang3</artifactId>
             <version>${version.commons-lang3}</version>
         </dependency>
-
 
     </dependencies>
 
