--- a/fake-news-tests-core/pom.xml
+++ b/fake-news-tests-core/pom.xml
@@ -44,6 +44,12 @@
             <version>0.1</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-spring</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
